--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "private": true,
   "dependencies": {
-
+    "express":"^4.17.1",
     "@angular/cli": "^12.2.9",
     "@angular/compiler-cli": "^12.2.9",
     "@angular/animations": "~12.2.0",
