--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
-  "engines": {
+  "engines":
+  {
     "node": "14.18.0",
     "npm":"6.14.15"
   },
